--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,6 +12,7 @@ phases:
         commands:
             - echo "Running on $MY_AWS_REGION"
             - echo "Print Environment Variables"
+            - printenv
             - echo "Start the installation process"
             - echo "Installation Process Completed"
             - echo "Hey, Welcome to AWS $name"
@@ -31,3 +32,7 @@ phases:
         commands:
             - echo "We are currently on post_build phase"
             - echo "post_build phase activity is completed. Moving to Artifacts Phase"
+
+artifacts:
+    files:
+        - '**/*'     # Include all files in the build directory
